re PR tree-optimization/24716 (Wrong code generated when optimising)

2005-11-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/24716
	* tree-scalar-evolution.c (analyze_evolution_in_loop): Use
	t_bool to track results from follow_ssa_edge.

	* gcc.c-torture/execute/pr24716.c: New testcase.

From-SVN: r106700